// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxCardFooter customize 1`] = `
<div>
  <div
    class="card-footer bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxCardFooter component 1`] = `
<div>
  <div
    class="card-footer"
  >
    Test
  </div>
</div>
`;
